YangLiCode added a paragraph

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Yang Li Code</h1>
     <h1>ALT account</h1>
+    <p>Yang Li Code paragraph blah blah blah blah</p>
 </body>
 </html>
